--- a/style.css
+++ b/style.css
@@ -1,13 +1,22 @@
+::root {
+  --cor1: #010409;
+  --cor2: #fbfcfd;
+}
+
 body {
 width: 100vw;
 height: 100vh;
 margin: 0;
 
-background: #010409;
-color: #fbfcfd;
+background: --cor1;
+color: --cor2;
 
 display: flex;
 flex-direction: row;
 justify-content: center;
 align-items: center;
+}
+
+h1 {
+  color: --cor2;
 }
