--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 ::root {
   --cor1: #010409;
   --cor2: #fbfcfd;
+  --cor3: #040912;
 }
 
 body {
@@ -15,6 +16,14 @@ display: flex;
 flex-direction: row;
 justify-content: center;
 align-items: center;
+}
+
+.corpo {
+  width: 35%;
+  height: 45%;
+
+  background: --cor3;
+  margin-radius: 3px;
 }
 
 h1 {
