--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ align-items: center;
   width: 35%;
   height: 45%;
 
-  background: yellow;
+  background-color: yellow;
   margin-radius: 3px;
 }
 
