--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ align-items: center;
   width: 35%;
   height: 45%;
 
-  background-color: yellow;
-  margin-radius: 3px;
+  background-color: --cor3;
+  border-radius: 3px;
   padding: 3px;
 }
 
