--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ width: 100vw;
 height: 100vh;
 margin: 0;
 
-background-color: #010409;
-color: #fbfcfd;
+background-color: var(--cor1);
+color: var(--cor2);
 
 display: flex;
 flex-direction: row;
@@ -22,7 +22,7 @@ align-items: center;
   width: 35%;
   height: 45%;
 
-  background-color: #040912;
+  background-color: var (--cor3);
   border-radius: 3px;
   padding: 3px;
   
